Changelog
=========

1.1 (unreleased)
----------------

- Add new step for 'basic04_add_and_publish_an_event' in dictionary fill_out_the_fields [mirco]
- Change some steps in tours to use TinyMCE [mirco]

1.0 (unreleased)
----------------

- Initial release