@@ -46,16 +46,16 @@ insert_internal_link = {
                'selector': u'',
                'text': u'link'},
                {'description': _(u"This pop-up window allows you to browse the content of your site. Notice the links in the left-hand column. Click on [Home] to browse to the root directory of your site."),
-               'idStep': u'iframe_action_click',
-               'selector': u'.plonepopup iframe',
-               'text': u'home'},
+               'idStep': u'iframe_click',
+               'selector': u'#home a',
+               'text': u''},
                 {'description': _(u"Find the page titled 'Welcome to Plone' and select the [radio button] next to it."),
-               'idStep': u'',
-               'selector': u'div[title="Congratulations! You have successfully installed Plone."] input[name="drawer-item-radio"]',
+               'idStep': u'iframe_radio',
+               'selector': u'#internallinkcontainer div:contains("Welcome to Plone") input',
                'text': u''},
                {'description': _(u"Click [Insert] to create the hyperlink."),
-               'idStep': u'',
-               'selector': u'#kupu-librarydrawer div.kupu-dialogbuttons button.kupu-dialog-button',
+               'idStep': u'iframe_click',
+               'selector': u'#insert',
                'text': u''},
                {'description': _(u"Click [Save] to finish."),
                'idStep': u'form_save',
