@@ -45,17 +45,21 @@ insert_external_link = {
                'idStep': u'tiny_button_click',
                'selector': u'',
                'text': u'link'},
-               {'description': _(u"Notice the field containing the familiar http:// prefix. After the second forward slash, type 'www.plone.org'. You should now see the complete web address which looks like this: http://www.plone.org."),
-               'idStep': u'text',
-               'selector': u'input.kupu-toolbox-st,input.kupu-linkdrawer-input',
-               'text': u'http://www.plone.org'},
-                {'description': _(u"Now click the [Preview button] to check the link. Preview lets you confirm that you have the correct webpage before you commit the link."),
-               'idStep': u'preview',
-               'selector': u'',
+               {'description': _(u"This pop-up window allows you to browse the content of your site. Notice the links in the left-hand column. Click on [External] to insert a web address."),
+               'idStep': u'iframe_click',
+               'selector': u'.configlets a:contains("External")',
                'text': u''},
-               {'description': _(u"Click [OK] to create the hyperlink."),
-               'idStep': u'button',
-               'selector': u'#kupu-linkdrawer button.kupu-dialog-button:contains("Ok")',
+               {'description': _(u"Notice the select box containing the familiar http:// prefix. In the empty text field type 'www.plone.org'."),
+               'idStep': u'iframe_text',
+               'selector': u'#externalurl',
+               'text': u'www.plone.org'},
+                {'description': _(u"Now click the [Preview button] to check the link. Preview lets you confirm that you have the correct webpage before you commit the link."),
+               'idStep': u'iframe_click',
+               'selector': u'#preview',
+               'text': u''},
+               {'description': _(u"Click [Insert] to create the hyperlink."),
+               'idStep': u'iframe_click',
+               'selector': u'#insert',
                'text': u''},
                {'description': _(u"Click [Save] to finish."),
                'idStep': u'form_save',
