@@ -54,13 +54,13 @@ insert_image = {
                'idStep': u'',
                'selector': u'',
                'text': u''},
-               {'description': _(u"Choose [Left] alignment and a [Size] from the size menu. You can leave the [Text Equivalent] field as-is, or change the text if you wish. This is the 'alt' text for the image which aids in site accessibility, search, and indexing."),
-               'idStep': u'image_align_left',
-               'selector': u'',
-               'text': u''},
-               {'description': _(u"Click [OK] to complete the image insert."),
-               'idStep': u'button_dialog_ok',
-               'selector': u'',
+               {'description': _(u"Choose [Left] alignment and a [Dimension] from the size menu. You can leave the [Image description] field as-is, or change the text if you wish. This is the 'alt' text for the image which aids in site accessibility, search, and indexing."),
+               'idStep': u'iframe_select',
+               'selector': u'#classes',
+               'text': u'image-left'},
+               {'description': _(u"Click [Insert] to complete the image insert."),
+               'idStep': u'iframe_click',
+               'selector': u'#insert',
                'text': u''},
                {'description': _(u"Click [Save] to finish."),
                'idStep': u'form_save',
