@@ -87,10 +87,10 @@ insert_internal_link = {
                'idStep': u'',
                'selector': u'#archetypes-fieldname-text iframe',
                'text': u'Download this report [PDF 1.2 Mb]'},
-               {'description': _(u"Now highlight the link text and click the [Internal Link] icon in the editor toolbar (it looks like a piece of chain link)."),
-               'idStep': u'button_internal_link',
+               {'description': _(u"Now highlight the link text and click the [Link icon] in the editor toolbar (it looks like a piece of chain link)."),
+               'idStep': u'tiny_button_click',
                'selector': u'',
-               'text': u''},
+               'text': u'link'},
                {'description': _(u"Use the [pop-up window] to browse to the location of the file you just uploaded."),
                'idStep': u'',
                'selector': u'',
@@ -99,9 +99,9 @@ insert_internal_link = {
                'idStep': u'',
                'selector': u'',
                'text': u''},
-               {'description': _(u"Click [OK] to create the hyperlink."),
-               'idStep': u'button_dialog_ok',
-               'selector': u'',
+               {'description': _(u"Click [Insert] to create the hyperlink."),
+               'idStep': u'iframe_click',
+               'selector': u'#insert',
                'text': u''},
                {'description': _(u"Click [Save] to finish."),
                'idStep': u'form_save',
