@@ -6,6 +6,7 @@ Changelog
 
 - Add new step for 'basic04_add_and_publish_an_event' in dictionary fill_out_the_fields [mirco]
 - Change some steps in tours to use TinyMCE [mirco]
+- Modified all tour to make it a correct use in Plone4 [mirco] 
 
 1.0 (unreleased)
 ----------------
